force-app/main/default/objects/SDOC__Log__c/SDOC__Log__c.object-meta.xml
<CustomObject>
    <description>SDocs log</description>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>