force-app/main/default/objects/SDOC__Log__c/fields/SDOC__Duration__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Duration__c</fullName>
    <description>Duration of the transaction logged</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>