force-app/main/default/objects/SDOC__Log__c/fields/SDOC__Error__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Error__c</fullName>
    <description>Error of the transaction logged</description>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>