force-app/main/default/objects/SDOC__Log__c/fields/SDOC__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Request_Id__c</fullName>
    <description>The request Id of the transaction logged</description>
    <label>Request_Id</label>
    <type>TextArea</type>
</CustomField>