force-app/main/default/objects/SDOC__Log__c/fields/SDOC__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Request_Type__c</fullName>
    <description>The request type of the transaction logged</description>
    <label>Request_Type</label>
    <type>TextArea</type>
</CustomField>