force-app/main/default/objects/SDOC__Log__c/fields/SDOC__Start__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Start__c</fullName>
    <description>Start time of the transaction logged</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>