force-app/main/default/objects/SDOC__Log__c/fields/SDOC__User__c.field-meta.xml
<CustomField>
    <fullName>SDOC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that generated the log</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>